Migrate to Java 25: download and install JDK 25 in the CMD2RDF Docker image; -XX:PermSize and -XX:MaxPermSize no longer exist for Java 25 - either drop them (chosen) or use -XX:MetaspaceSize or -XX:MaxMetaspaceSize